# q2-ms

./: .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-dev.yaml  ci.yaml  ci.yml  q2-ci.yaml
ci/recipe/: meta.yaml
conda-recipe/: meta.yaml
environment-files/: q2-ms-qiime2-tiny-2025.4.yml
q2_ms/: __init__.py  _methods.py  _version.py  citations.bib  plugin_setup.py  utils.py
q2_ms/assets/: adjust_retention_time_obiwarp.R  fill_peaks_area.R  find_peaks_centwave.R  find_peaks_xcms.R  group_peaks_density.R  match_spectra.R  partition_xcms_experiment.R  read_ms_experiment.R
q2_ms/tests/: test_methods.py  test_utils.py  tests_utils.py
q2_ms/types/: __init__.py  _format.py  _type.py  _validators.py
q2_ms/types/tests/: __init__.py  test_formats.py  test_validators.py
q2_ms/types/tests/data/MGF_invalid/: invalid.mgf
q2_ms/types/tests/data/MGF_valid/: valid.mgf
q2_ms/types/tests/data/MSP_invalid/: invalid.msp
q2_ms/types/tests/data/MSP_valid/: valid.msp
q2_ms/xcms/: adjust_retention_time_obiwarp.py  collate.py  database.py  fill_peaks_area.py  find_peaks_centwave.py  find_peaks_xcms.py  group_peaks_density.py  match_spectra.py  metadata.py  partition.py  read_ms_experiment.py  utils.py
q2_ms/xcms/tests/: test_collate.py  test_database.py  test_find_peaks_centwave.py  test_metadata.py  test_partition.py  test_read_ms_experiment.py  test_utils.py  tests_adjust_retention_time_obiwarp.py  tests_database.py  tests_find_peaks_centwave.py  tests_metadata.py  tests_read_ms_experiment.py
(+79 files in other folders)
